Fixed button padding on small screens

--- a/_sass/base/_buttons.scss
+++ b/_sass/base/_buttons.scss
@@ -18,6 +18,8 @@
   vertical-align: middle;
   white-space: nowrap;
 
+  @include media-query($medium-screen) { padding: $small-spacing; }
+
   &:hover,
   &:focus {
     background-color: shade($action-color, 20%);
